--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "DesitApp",
     "slug": "DesitApp",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "portrait", 
     "icon": "./assets/logonuevo.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/logonuevo.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.herreramauro.DesitApp"
