--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@react-navigation/native-stack": "^6.10.0",
     "axios": "^1.7.2",
     "eas-cli": "^10.2.4",
-    "expo": "^51.0.31",
+    "expo": "~51.0.34",
     "expo-doctor": "^1.9.0",
     "expo-font": "~12.0.10",
-    "expo-splash-screen": "^0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
