--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "@types/react": "~18.2.79",
     "axios": "^1.7.2",
     "eas-cli": "^10.2.4",
-    "expo": "~51.0.34",
+    "expo": "^51.0.34",
     "expo-doctor": "^1.9.0",
     "expo-font": "~12.0.10",
     "expo-splash-screen": "~0.27.6",
@@ -27,7 +28,7 @@
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "@types/react": "~18.2.79"
+    "expo-sms": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
