--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "expo": "^51.0.34",
     "expo-doctor": "^1.9.0",
     "expo-font": "~12.0.10",
+    "expo-sms": "~12.0.1",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-sms": "~12.0.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
