--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react": "~18.2.79",
     "axios": "^1.7.2",
     "eas-cli": "^10.2.4",
-    "expo": "^51.0.34",
+    "expo": "~51.0.35",
     "expo-doctor": "^1.9.0",
     "expo-font": "~12.0.10",
     "expo-sms": "~12.0.1",
