--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "version": ">= 9.0.5"
+       "version": ">= 9.0.5"
   },
   "build": {
     "development": {
@@ -16,7 +16,9 @@
         "simulator": false
       }
     },
-    "production": {}
+    "production": {
+      "autoIncrement": true
+    }
   },
   "submit": {
     "production": {}
