--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "@types/react": "~18.2.79",
     "axios": "^1.7.2",
     "eas-cli": "^10.2.4",
-    "expo": "~51.0.38",
+    "expo": "~51.0.39",
     "expo-doctor": "^1.9.0",
     "expo-font": "~12.0.10",
     "expo-sms": "~12.0.1",
-    "expo-splash-screen": "~0.27.6",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "twilio": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
