--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-config": "^0.18.11",
-    "@expo/prebuild-config": "~7.0.0",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-config": "~0.19.0",
+    "@expo/prebuild-config": "~8.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "axios": "^1.7.2",
     "eas-cli": "^10.2.4",
-    "expo": "~51.0.39",
+    "expo": "^52.0.9",
     "expo-doctor": "^1.9.0",
-    "expo-font": "~12.0.10",
-    "expo-sms": "~12.0.1",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "expo-font": "~13.0.1",
+    "expo-sms": "~13.0.0",
+    "expo-splash-screen": "~0.29.12",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "twilio": "^5.3.5"
   },
   "devDependencies": {
