--- a/eas.json
+++ b/eas.json
@@ -1,11 +1,12 @@
 {
   "cli": {
-       "version": ">= 9.0.5"
+    "version": ">= 9.0.5",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"      
+      "distribution": "internal"
     },
     "preview": {
       "distribution": "internal",
