--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "twilio": "^5.3.5"
+    "twilio": "^5.3.5",
+    "expo-dev-client": "~5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
