--- a/package.json
+++ b/package.json
@@ -19,20 +19,18 @@
     "@types/react": "~18.3.12",
     "axios": "^1.7.2",
     "eas-cli": "^10.2.4",
-    "expo": "^52.0.0",
-    "expo-dev-client": "~5.0.12",
+    "expo": "~52.0.33",
     "expo-doctor": "^1.9.0",
     "expo-font": "~13.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-sms": "~13.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "twilio": "^5.3.5",
-    "expo-linear-gradient": "~14.0.2"
+    "twilio": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
