--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "DesitApp",
     "slug": "DesitApp",
     "version": "1.0.0",
-    "orientation": "portrait", 
+    "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -13,7 +13,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.herreramauro.DesitApp"
+      "bundleIdentifier": "com.herreramauro.DesitApp",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +24,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.herreramauro.DesitApp"
-    },                
+    },
     "web": {
       "favicon": "./assets/favicon.png"
     },
