--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@types/react": "~18.3.12",
     "axios": "^1.7.2",
     "eas-cli": "^10.2.4",
-    "expo": "~52.0.33",
+    "expo": "^52.0.0",
     "expo-doctor": "^1.9.0",
     "expo-font": "~13.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-sms": "~13.0.1",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
